# cobra-db

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  how_to_count_images.md  how_to_setup_local.md  index.md  make.bat  requirements.txt  tutorial.md
docs/jupyter_execute/: how_to_count_images.ipynb
docs/jupyter_execute/jupyter_execute/: example.ipynb
src/cobra_db/: __init__.py  dataset_mod.py  deid.py  deid_recipe.txt  deid_recipe_mr.txt  encrypt.py  enums.py  filesystem.py  model.py  mongo_dao.py  types.py  utils.py
src/cobra_db/scripts/: pseudonymize_image_metadata.py  stage_1_ingest_images.py  stage_2.py  stage_2_group_patients.py  stage_2_group_series.py  stage_2_group_studies.py  utils.py
tests/: pytest.ini  test_dataset_mod.py  test_deid.py  test_encrypt.py  test_filesystem.py  test_model.py  test_mongo_dao.py  test_pseudonymize_image_metadata.py  test_stage_1.py  test_stage_2.py  test_utils.py
tests/db_mock/: ImageMetadata.json  Patient.json
tests/dicom_data/: readme.md
tests/dicom_data/6670427471/05-26-2000-NA-FORFILE CT ABD ANDOR PEL - CD-25398/5.000000-NEPHRO  4.0  B40f  M0.4-18678/: 1-001.dcm  1-002.dcm  1-003.dcm  1-004.dcm  1-005.dcm  1-006.dcm  1-007.dcm  1-008.dcm  1-009.dcm  1-010.dcm  1-011.dcm  1-012.dcm  1-013.dcm  1-014.dcm  1-015.dcm  1-016.dcm  1-017.dcm  1-018.dcm  1-019.dcm  1-020.dcm  1-021.dcm  1-022.dcm  1-023.dcm  1-024.dcm  1-025.dcm  1-026.dcm  1-027.dcm  1-028.dcm  1-029.dcm  1-030.dcm  1-031.dcm  1-032.dcm  1-033.dcm  1-034.dcm  1-035.dcm  1-036.dcm  1-037.dcm  1-038.dcm  1-039.dcm  1-040.dcm  (+67 more)
tests/dicom_data/6774825273/09-11-2013-NA-XR CHEST AP PORTABLE for Scott Kaufman-73078/1.000000-NA-91318/: 1-1.dcm
tests/script_config/: deid.yaml  deid_multiproc.yaml  recipe_1.txt
(+1 files in other folders)
